--- a/ArchieComics/ArchieComics.html
+++ b/ArchieComics/ArchieComics.html
@@ -154,7 +154,7 @@ Archie Comics was also the title of the company's longest-running publication, t
 <li><a href="ArchieComics53.jpg">Sam Hill Private Eye</a> (1950)
 <li><a href="ArchieComics54.jpg">Shadow</a> (1964)
 <li><a href="ArchieComics55.jpg">Teenage Mutant Ninja Turtles Adventures</a> (1988)
-<li><a href="../TopNotch/TopNotch.html">Top Notch</a>
+<li><a href="../TopNotch/TopNotch.html">Top Notch</a> (1939)
 <li><a href="ArchieComics56.jpg">Vamperonica</a> (2018)
 <li><a href="ArchieComics57.jpg">Veronica</a> (1989)
 <li><a href="ArchieComics58.jpg">Wilber</a> (1944)
