--- a/index.html
+++ b/index.html
@@ -1874,6 +1874,13 @@
 </tr>
 
 <tr>
+<td>Adventures Of Bayou Billy</td>
+<td>1989</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Adventures Of Captain America</td>
 <td>1991</td>
 <td>Marvel</td>
@@ -1926,6 +1933,20 @@
 <td>2013</td>
 <td>Fantagraphics</td>
 <td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Adventures Of Kool-Aid Man</td>
+<td>1987</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Adventures Of Little Archie</td>
+<td>1961</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -2076,10 +2097,38 @@
 </tr>
 
 <tr>
+<td>Adventures Of The Dover Boys</td>
+<td>1950</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Adventures Of The Fly</td>
+<td>1960</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Adventures on The Fringe</td>
 <td>1992</td>
 <td>Fantagraphics</td>
 <td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Adventures Of The Jaguar</td>
+<td>1961</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Adventures Of Young Dr. Masters</td>
+<td>1964</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -2150,6 +2199,20 @@
 <td>2007</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Afterlife With Archie</td>
+<td>2013</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Afterlife With Archie Magazine</td>
+<td>2013</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -3968,6 +4031,13 @@
 </tr>
 
 <tr>
+<td>American's 1st Patriotic Comic Book Hero, The Shield</td>
+<td>2002</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>America's Best Comics</td>
 <td>1942</td>
 <td>Pines</td>
@@ -5008,6 +5078,20 @@
 <td>1942</td>
 <td>Archie</td>
 <td><a href="Archie/Archie.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Archie &amp; Friends</td>
+<td>2002</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Archie 1000 Page Comics 75 Anniversary Bash</td>
+<td>2013</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -7719,6 +7803,20 @@
 </tr>
 
 <tr>
+<td>Betty And Me</td>
+<td>1965</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Betty And Veronica</td>
+<td>1987</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Betty Boop</td>
 <td>1930</td>
 <td>Paramount</td>
@@ -8544,6 +8642,13 @@
 </tr>
 
 <tr>
+<td>Black Hood</td>
+<td>1943</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Black Hops: U.S.A. G.I.</td>
 <td>1999</td>
 <td>Antarctic Press</td>
@@ -8674,6 +8779,13 @@
 <td>2013</td>
 <td>Image</td>
 <td><a href="BlackScience/BlackScience.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Black Swan</td>
+<td>1945</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9302,7 +9414,7 @@
 <tr>
 <td>Blue Ribbon</td>
 <td>1939</td>
-<td>MLJ</td>
+<td>Archie</td>
 <td><a href="BlueRibbon/BlueRibbon.html">Details</a></td>
 </tr>
 
@@ -11112,6 +11224,13 @@
 </tr>
 
 <tr>
+<td>Captain Hero</td>
+<td>1983</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Captain Jet</td>
 <td>1952</td>
 <td>Farrell</td>
@@ -12204,6 +12323,13 @@
 </tr>
 
 <tr>
+<td>Cheryl Blossom</td>
+<td>1995</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Cherry</td>
 <td>1993</td>
 <td>Kitchen Sink</td>
@@ -12389,6 +12515,13 @@
 <td>2010</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Chilling Adventures Of Sabrina</td>
+<td>2014</td>
+<td>Archie</td>
+<td><a href="Sabrina/Sabrina.html">Details</a></td>
 </tr>
 
 <tr>
@@ -13356,6 +13489,13 @@
 </tr>
 
 <tr>
+<td>Comet</td>
+<td>1983</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Comet Man</td>
 <td>1987</td>
 <td>Marvel</td>
@@ -13811,6 +13951,13 @@
 </tr>
 
 <tr>
+<td>Conservation Corps</td>
+<td>1993</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Conspiracy</td>
 <td>1998</td>
 <td>Marvel</td>
@@ -13997,6 +14144,13 @@
 <td>1995</td>
 <td>Marvel</td>
 <td><a href="CosmicPowersUnlimited/CosmicPowersUnlimited.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Cosmo</td>
+<td>2018</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -15828,6 +15982,20 @@
 </tr>
 
 <tr>
+<td>Darling Love</td>
+<td>1949</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Darling Romance</td>
+<td>1983</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dart</td>
 <td>1996</td>
 <td>Image</td>
@@ -17144,6 +17312,13 @@
 </tr>
 
 <tr>
+<td>Dilton's Strange Science</td>
+<td>1989</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dingo</td>
 <td>2009</td>
 <td>Boom!</td>
@@ -18058,6 +18233,13 @@
 <td>1987</td>
 <td>Taito</td>
 <td><a href="DoubleDragon/DoubleDragon.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Double Life Of Private Strong</td>
+<td>1959</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -20154,6 +20336,13 @@
 </tr>
 
 <tr>
+<td>Explorers Of The Unknown</td>
+<td>1990</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Extended Dream Of Mr. D</td>
 <td>1998</td>
 <td>Drawn &amp; Quarterly</td>
@@ -20305,6 +20494,13 @@
 <td>1998</td>
 <td>About Comics</td>
 <td><a href="AboutComics/AboutComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Faculty Funnies</td>
+<td>1989</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -21757,6 +21953,13 @@
 
 <tr>
 <td>Flintstones</td>
+<td>1995</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Flintstones</td>
 <td>1970</td>
 <td>Charlton</td>
 <td><a href="Charlton/Charlton.html">Details</a></td>
@@ -21830,6 +22033,13 @@
 <td>1950</td>
 <td>Avon</td>
 <td><a href="Avon/Avon.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Fly Man</td>
+<td>1965</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -22026,6 +22236,13 @@
 <td>1941</td>
 <td>Ace</td>
 <td><a href="AceMagazines/AceMagazines.html">Details</a></td> 
+</tr>
+
+<tr>
+<td>Fox</td>
+<td>2013</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -23716,6 +23933,13 @@
 </tr>
 
 <tr>
+<td>Ginger</td>
+<td>1951</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Girl Comics</td>
 <td>1949</td>
 <td>Marvel</td>
@@ -25140,6 +25364,13 @@
 <td>1975</td>
 <td>Atlas Seaboard</td>
 <td><a href="HandsOfTheDragon/HandsOfTheDragon.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hangman</td>
+<td>2017</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -28141,6 +28372,13 @@
 
 <tr>
 <td>Jackpot</td>
+<td>1941</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Jackpot</td>
 <td>1952</td>
 <td>Youthful</td>
 <td><a href="Youthful/Youthful.html">Details</a></td>
@@ -28770,6 +29008,13 @@
 </tr>
 
 <tr>
+<td>Jinx</td>
+<td>2012</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Jinx: The Essential Collection</td>
 <td>2011</td>
 <td>Icon</td>
@@ -29050,6 +29295,13 @@
 </tr>
 
 <tr>
+<td>Jokebook</td>
+<td>1977</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Joker</td>
 <td>1927</td>
 <td>Amalgamated</td>
@@ -29075,6 +29327,13 @@
 <td>1945</td>
 <td>Spotlight</td>
 <td><a href="SpotlightPublishers/SpotlightPublishers.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Jolly Jingles</td>
+<td>1943</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -29138,6 +29397,13 @@
 <td>1896</td>
 <td>Creator</td>
 <td><a href="JosephDoolin/JosephDoolin.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Josie And The Pussycats</td>
+<td>1969</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -29257,6 +29523,13 @@
 <td>1950</td>
 <td>Fox Comics</td>
 <td><a href="FoxPublications/FoxPublications.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Jughead</td>
+<td>1965</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -29698,6 +29971,13 @@
 <td>1954</td>
 <td>Creator</td>
 <td><a href="KatsuhiroOtomo/KatsuhiroOtomo.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Katy Keene</td>
+<td>1949</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -31140,6 +31420,13 @@
 <td>1945</td>
 <td>Spotlight</td>
 <td><a href="SpotlightPublishers/SpotlightPublishers.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Laugh</td>
+<td>1946</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -33167,6 +33454,13 @@
 </tr>
 
 <tr>
+<td>Mantech Robot Warriors</td>
+<td>1984</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Many Ghosts Of Doctor Graves</td>
 <td>1967</td>
 <td>Charlton</td>
@@ -34371,6 +34665,13 @@
 </tr>
 
 <tr>
+<td>Mega Man</td>
+<td>2011</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Mega Princess</td>
 <td>2016</td>
 <td>Boom!</td>
@@ -34937,17 +35238,31 @@
 </tr>
 
 <tr>
-<td>Mighty Ghost</td>
-<td>1958</td>
-<td>Farrell</td>
-<td><a href="Farrell/Farrell.html">Details</a></td>
-</tr>
-
-<tr>
 <td>Mighty Boosh</td>
 <td>1998</td>
 <td>BBC</td>
 <td><a href="MightyBoosh/MightyBoosh.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mighty Comics</td>
+<td>1966</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mighty Crusaders</td>
+<td>1965</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mighty Ghost</td>
+<td>1958</td>
+<td>Farrell</td>
+<td><a href="Farrell/Farrell.html">Details</a></td>
 </tr>
 
 <tr>
@@ -35025,6 +35340,13 @@
 <td>2017</td>
 <td>Dynamite</td>
 <td><a href="Dynamite/Dynamite.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mighty Mutanimals</td>
+<td>1991</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -35718,6 +36040,13 @@
 <td>1936</td>
 <td>National Allied</td>
 <td><a href="MoreFun/MoreFun.html">Details</a></td>
+</tr>
+
+<tr>
+<td>More Seymour</td>
+<td>1963</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -38913,6 +39242,13 @@
 </tr>
 
 <tr>
+<td>Pat The Brat</td>
+<td>1955</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Path</td>
 <td>2002</td>
 <td>CrossGen</td>
@@ -39197,6 +39533,13 @@
 <td>1912</td>
 <td>Amalgamated</td>
 <td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Pep</td>
+<td>1940</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -41485,6 +41828,13 @@
 </tr>
 
 <tr>
+<td>Red Circle Sorcery</td>
+<td>1974</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Red Colored Elegy</td>
 <td>2008</td>
 <td>Drawn &amp; Quarterly</td>
@@ -42362,6 +42712,13 @@
 <td>1999</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Riverdale</td>
+<td>2017</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -43376,6 +43733,13 @@
 <td>1924</td>
 <td>Creator</td>
 <td><a href="SamGlanzman/SamGlanzman.html">Details</a></td>
+
+<tr>
+<td>Sam Hill Private Eye</td>
+<td>1950</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
 
 <tr>
 <td>Sam's Strip</td>
@@ -44536,6 +44900,13 @@
 <td>1931</td>
 <td>Street &amp; Smith</td>
 <td><a href="Shadow/Shadow.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Shadow</td>
+<td>1964</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -48823,6 +49194,13 @@
 </tr>
 
 <tr>
+<td>Teenage Mutant Ninja Turtles Adventures</td>
+<td>1988</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Teepee Tim</td>
 <td>1955</td>
 <td>ACG</td>
@@ -51280,6 +51658,13 @@
 </tr>
 
 <tr>
+<td>Vamperonica</td>
+<td>2018</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Vampire State Building</td>
 <td>2019</td>
 <td>Ablaze</td>
@@ -51508,6 +51893,13 @@
 <td>2015</td>
 <td>Boom!</td>
 <td><a href="Boom!/Boom!.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Veronica</td>
+<td>1989</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -53114,6 +53506,13 @@
 </tr>
 
 <tr>
+<td>Wilber</td>
+<td>1944</td>
+<td>Archie</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Wild Bill Hickock</td>
 <td>1949</td> 
 <td>Avon</td>
@@ -54643,7 +55042,7 @@
 <tr>
 <td>Zip Comics</td>
 <td>1940</td>
-<td>MLJ</td>
+<td>Archie</td>
 <td><a href="ZipComics/ZipComics.html">Details</a></td>
 </tr>
 
