--- a/index.html
+++ b/index.html
@@ -6755,6 +6755,13 @@
 
 <tr>
 <td>Badlands</td>
+<td>1990</td>
+<td>Vortex</td>
+<td><a href="Vortex/Vortex.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Badlands</td>
 <td>1993</td>
 <td>Dark Horse</td>
 <td><a href="Badlands/Badlands.html">Details</a></td>
@@ -8223,6 +8230,13 @@
 </tr>
 
 <tr>
+<td>Big Black Kiss</td>
+<td>1989</td>
+<td>Vortex</td>
+<td><a href="Vortex/Vortex.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Big Blown Baby</td>
 <td>1996</td>
 <td>Dark Horse</td>
@@ -8916,6 +8930,13 @@
 
 <tr>
 <td>Black Kiss</td>
+<td>1988</td>
+<td>Vortex</td>
+<td><a href="Vortex/Vortex.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Black Kiss</td>
 <td>2010</td>
 <td>Dynamite</td>
 <td><a href="Dynamite/Dynamite.html">Details</a></td>
@@ -9521,6 +9542,13 @@
 <td>1987</td>
 <td>Aircel</td>
 <td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bloodlines</td>
+<td>1987</td>
+<td>Vortex</td>
+<td><a href="Vortex/Vortex.html">Details</a></td>
 </tr>
 
 <tr>
@@ -16759,6 +16787,13 @@
 </tr>
 
 <tr>
+<td>Daytona Special No. 1: The Daytona 500 Story</td>
+<td>1991</td>
+<td>Vortex</td>
+<td><a href="Vortex/Vortex.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Daytripper</td>
 <td>2010</td>
 <td>Vertigo</td>
@@ -18257,6 +18292,13 @@
 </tr>
 
 <tr>
+<td>Doc Chaos: the Stange Attractor</td>
+<td>1990</td>
+<td>Vortex</td>
+<td><a href="Vortex/Vortex.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Doc Macabre</td>
 <td>2010</td>
 <td>IDW</td>
@@ -19707,9 +19749,23 @@
 
 <tr>
 <td>Ed The Happy Clown</td>
+<td>1989</td>
+<td>Vortex</td>
+<td><a href="Vortex/Vortex.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ed The Happy Clown</td>
 <td>2005</td>
 <td>Drawn &amp; Quarterly</td>
 <td><a href="DrawnQuarterly/DrawnQuarterly.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ed The Happy Clown: The Definitive Ed Book</td>
+<td>1992</td>
+<td>Vortex</td>
+<td><a href="Vortex/Vortex.html">Details</a></td>
 </tr>
 
 <tr>
@@ -31037,6 +31093,13 @@
 </tr>
 
 <tr>
+<td>Kaptain Keen And Kompany</td>
+<td>1986</td>
+<td>Vortex</td>
+<td><a href="Vortex/Vortex.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Karas</td>
 <td>2004</td>
 <td>Dark Horse</td>
@@ -31153,6 +31216,20 @@
 <td>1950</td>
 <td>Marvel</td>
 <td><a href="Kellys/Kellys.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Kelvin Mace</td>
+<td>1985</td>
+<td>Vortex</td>
+<td><a href="Vortex/Vortex.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ken Steacy's Summer Rerun</td>
+<td>1987</td>
+<td>Vortex</td>
+<td><a href="Vortex/Vortex.html">Details</a></td>
 </tr>
 
 <tr>
@@ -32756,6 +32833,20 @@
 <td>2015</td>
 <td>Dynamite</td>
 <td><a href="Dynamite/Dynamite.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Legends Of NASCAR</td>
+<td>1991</td>
+<td>Vortex</td>
+<td><a href="Vortex/Vortex.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Legends Of NASCAR Christmas Special</td>
+<td>1991</td>
+<td>Vortex</td>
+<td><a href="Vortex/Vortex.html">Details</a></td>
 </tr>
 
 <tr>
@@ -36932,9 +37023,23 @@
 
 <tr>
 <td>Mister X</td>
+<td>1984</td>
+<td>Vortex</td>
+<td><a href="Vortex/Vortex.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mister X</td>
 <td>1996</td>
 <td>Caliber</td>
 <td><a href="CaliberComics/CaliberComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mister X Special</td>
+<td>1990</td>
+<td>Vortex</td>
+<td><a href="Vortex/Vortex.html">Details</a></td>
 </tr>
 
 <tr>
@@ -38401,6 +38506,13 @@
 </tr>
 
 <tr>
+<td>NASCAR Adventures</td>
+<td>1991</td>
+<td>Vortex</td>
+<td><a href="Vortex/Vortex.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Nash</td>
 <td>1999</td>
 <td>Image</td>
@@ -39364,6 +39476,13 @@
 <td>2011</td>
 <td>Vertigo</td>
 <td><a href="NocheRoja/NocheRoja.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Nocturnal Emissions</td>
+<td>1991</td>
+<td>Vortex</td>
+<td><a href="Vortex/Vortex.html">Details</a></td>
 </tr>
 
 <tr>
@@ -40561,6 +40680,13 @@
 <td>2015</td>
 <td>Image</td>
 <td><a href="PaperGirls/PaperGirls.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Paradax!</td>
+<td>1987</td>
+<td>Vortex</td>
+<td><a href="Vortex/Vortex.html">Details</a></td>
 </tr>
 
 <tr>
@@ -43758,6 +43884,13 @@
 </tr>
 
 <tr>
+<td>Return Of Mister X</td>
+<td>1986</td>
+<td>Vortex</td>
+<td><a href="Vortex/Vortex.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Return Of The Dapper Men</td>
 <td>2010</td>
 <td>Archaia</td>
@@ -45086,6 +45219,13 @@
 </tr>
 
 <tr>
+<td>S'Not For Kids</td>
+<td>1991</td>
+<td>Valiant</td>
+<td><a href="Vortex/Vortex.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Saban's Go Go Power Rangers</td>
 <td>2017</td>
 <td>Boom!</td>
@@ -45551,6 +45691,13 @@
 <td>1992</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Savage Henry</td>
+<td>1987</td>
+<td>Vortex</td>
+<td><a href="Vortex/Vortex.html">Details</a></td>
 </tr>
 
 <tr>
@@ -49390,6 +49537,13 @@
 
 <tr>
 <td>Stig's Inferno</td>
+<td>1984</td>
+<td>Vortex</td>
+<td><a href="Vortex/Vortex.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Stig's Inferno</td>
 <td>1987</td>
 <td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
@@ -51265,6 +51419,13 @@
 </tr>
 
 <tr>
+<td>Thick Black Kiss</td>
+<td>1993</td>
+<td>Vortex</td>
+<td><a href="Vortex/Vortex.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Thief Of Thieves</td>
 <td>2012</td>
 <td>Image</td>
@@ -51367,6 +51528,13 @@
 <td>2013</td>
 <td>Marvel</td>
 <td><a href="ThorGodOfThunder/ThorGodOfThunder.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Those Anoying Post Bros.</td>
+<td>1985</td>
+<td>Vortex</td>
+<td><a href="Vortex/Vortex.html">Details</a></td>
 </tr>
 
 <tr>
@@ -52116,6 +52284,13 @@
 <td>2008</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Transit</td>
+<td>1987</td>
+<td>Vortex</td>
+<td><a href="Vortex/Vortex.html">Details</a></td>
 </tr>
 
 <tr>
@@ -54041,6 +54216,20 @@
 <td>2016</td>
 <td>Action Lab</td>
 <td><a href="ActionLab/ActionLab.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Vortex Comics</td>
+<td>1982</td>
+<td>Publisher</td>
+<td><a href="Vortex/Vortex.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Vortex</td>
+<td>1982</td>
+<td>Vortex</td>
+<td><a href="Vortex/Vortex.html">Details</a></td>
 </tr>
 
 <tr>
@@ -56883,6 +57072,13 @@
 <td>1983</td>
 <td>Drawn &amp; Quarterly</td>
 <td><a href="YummyFur/YummyFur.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Yummy Fur</td>
+<td>1986</td>
+<td>Vortex</td>
+<td><a href="Vortex/Vortex.html">Details</a></td>
 </tr>
 
 <tr>
