--- a/index.html
+++ b/index.html
@@ -4990,6 +4990,27 @@
 </tr>
 
 <tr>
+<td>Ape Comics</td>
+<td>2003</td>
+<td>Publisher</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ape Entertainment's Cartoonapalooza</td>
+<td>2008</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ape Entertainment's Comic Spectaculars</td>
+<td>2007</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Ape Nation</td>
 <td>1991</td>
 <td>Malibu</td>
@@ -5932,6 +5953,20 @@
 <td>2016</td>
 <td>Action Lab</td>
 <td><a href="ActionLab/ActionLab.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Athena Voltaire: Flight Of The Falcon</td>
+<td>2007</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Athena Voltaire: The Collected Webcomics</td>
+<td>2006</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
 </tr>
 
 <tr>
@@ -8635,6 +8670,20 @@
 </tr>
 
 <tr>
+<td>Bizarre New World</td>
+<td>2007</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bizarre New World: Population Explosion</td>
+<td>2008</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bizarre Romance</td>
 <td>2018</td>
 <td>Abrams</td>
@@ -8709,27 +8758,6 @@
 <td>2013</td>
 <td>Dynamite</td>
 <td><a href="Dynamite/Dynamite.html">Details</a></td>
-</tr>
-
-<tr>
-<td>Black Market</td>
-<td>2014</td>
-<td>Boom!</td>
-<td><a href="Boom!/Boom!.html">Details</a></td>
-</tr>
-
-<tr>
-<td>Black Plague</td>
-<td>2006</td>
-<td>Boom!</td>
-<td><a href="Boom!/Boom!.html">Details</a></td>
-</tr>
-
-<tr>
-<td>Blackbeard Legacy</td>
-<td>2006</td>
-<td>Alias</td>
-<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
 </tr>
 
 <tr>
@@ -8809,6 +8837,36 @@
 <td><a href="IDW/IDW.html">Details</a></td>
 </tr>
 
+
+<tr>
+<td>Black Coat &amp; Athena Volatire</td>
+<td>2009</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Black Coat: 52 Page Special</td>
+<td>2008</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Black Coat: A Call To Arms</td>
+<td>2009</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Black Coat: Or Give Me Death</td>
+<td>2009</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+
 <tr>
 <td>Black Diamond</td>
 <td>1983</td>
@@ -8828,6 +8886,13 @@
 <td>2005</td>
 <td>AIT Planet Lar</td>
 <td><a href="AITPlanetLar/AITPlanetLar.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Black Dynamite</td>
+<td>2011</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
 </tr>
 
 <tr>
@@ -8971,6 +9036,13 @@
 </tr>
 
 <tr>
+<td>Black Market</td>
+<td>2014</td>
+<td>Boom!</td>
+<td><a href="Boom!/Boom!.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Black Mask Studios</td>
 <td>2012</td>
 <td>Publisher</td>
@@ -9017,6 +9089,13 @@
 <td>1989</td>
 <td>AC Comics</td>
 <td><a href="ACComics/ACComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Black Plague</td>
+<td>2006</td>
+<td>Boom!</td>
+<td><a href="Boom!/Boom!.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9101,6 +9180,13 @@
 <td>2012</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Blackbeard Legacy</td>
+<td>2006</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
 </tr>
 
 <tr>
@@ -12292,6 +12378,13 @@
 <td>2018</td>
 <td>American Mythology</td>
 <td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Casper's Scare School</td>
+<td>2011</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
 </tr>
 
 <tr>
@@ -18712,6 +18805,13 @@
 </tr>
 
 <tr>
+<td>Donarr The Unyielding</td>
+<td>2012</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Don't Get Eaten By Anything</td>
 <td>2015</a>
 <td>Conundrum Press</td>
@@ -19335,10 +19435,24 @@
 </tr>
 
 <tr>
+<td>Dreamworks Megamind: Bad, Blue, Brilliant</td>
+<td>2010</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Drew Friedman</td>
 <td>1960</td>
 <td>Creator</td>
 <td><a href="DrewFriedman/DrewFriedman.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Drew Hayes Poison Elves</td>
+<td>2008</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
 </tr>
 
 <tr>
@@ -22002,6 +22116,13 @@
 </tr>
 
 <tr>
+<td>Femme Noir: The Dark City Diaries</td>
+<td>2008</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Femzine</td>
 <td>1981</td>
 <td>AC Comics</td>
@@ -22048,6 +22169,13 @@
 <td>2015</td>
 <td>Boom!</td>
 <td><a href="Boom!/Boom!.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Fiction Clemens</td>
+<td>2008</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
 </tr>
 
 <tr>
@@ -23205,6 +23333,13 @@
 </tr>
 
 <tr>
+<td>Freakshow</td>
+<td>2010</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Freddy</td>
 <td>1958</td>
 <td>Charlton</td>
@@ -24325,6 +24460,13 @@
 </tr>
 
 <tr>
+<td>Genie The Genius</td>
+<td>2013</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Genus</td>
 <td>1994</td>
 <td>Antarctic Press</td>
@@ -24945,6 +25087,13 @@
 <td>2000</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Go-Go Gorilla And The Jungle Crew Summer Fun Special</td>
+<td>2005</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
 </tr>
 
 <tr>
@@ -27075,6 +27224,13 @@
 </tr>
 
 <tr>
+<td>Helldorado: East Eats West</td>
+<td>2011</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Hellgate: London</td>
 <td>2007</td>
 <td>Dark Horse</td>
@@ -27268,6 +27424,13 @@
 <td>1950</td>
 <td>Harvey</td>
 <td><a href="HarveyComics/HarveyComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Heresy</td>
+<td>2008</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
 </tr>
 
 <tr>
@@ -27835,6 +27998,13 @@
 <td>2004</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Horrorwood</td>
+<td>2006</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
 </tr>
 
 <tr>
@@ -31912,6 +32082,27 @@
 </tr>
 
 <tr>
+<td>Kizoic Presents: Dreamworks Kung Fu Panda</td>
+<td>2009</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Kizoic Presents: Penguins Of Madagascar FCBD</td>
+<td>2010</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Kizoic Presents: Sesame Street</td>
+<td>2013</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Klaus</td>
 <td>2015</td>
 <td>Boom!</td>
@@ -32196,6 +32387,13 @@
 <td>2008</td>
 <td>Dreamworks</td>
 <td><a href="Dreamworks/Dreamworks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Kung Fu Panda</td>
+<td>2011</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
 </tr>
 
 <tr>
@@ -34580,6 +34778,13 @@
 </tr>
 
 <tr>
+<td>Magnitude</td>
+<td>2006</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Magneto</td>
 <td>1993</td>
 <td>Marvel</td>
@@ -36057,6 +36262,13 @@
 </tr>
 
 <tr>
+<td>Megamind</td>
+<td>2010</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Megaton Man</td>
 <td>1984</td>
 <td>Kitchen Sink</td>
@@ -36910,6 +37122,13 @@
 </tr>
 
 <tr>
+<td>Misadventures Of Clark &amp; Jefferson</td>
+<td>2007</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Misadventures Of Salem Hyde</td>
 <td>2013</td>
 <td>Abrams</td>
@@ -37341,6 +37560,13 @@
 <td>2017</td>
 <td>Aftershock</td>
 <td><a href="AftershockComics/AftershockComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Monstroids</td>
+<td>2008</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
 </tr>
 
 <tr>
@@ -41047,6 +41273,20 @@
 </tr>
 
 <tr>
+<td>Pengiuns Of Madagascar</td>
+<td>2010</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Pengiuns Of Madagascar: Operation Wonder From Down Under</td>
+<td>2010</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Penguins Of Madagascar</td>
 <td>2014</td>
 <td>Dreamworks</td>
@@ -43765,6 +44005,13 @@
 </tr>
 
 <tr>
+<td>Reign Of Megamind</td>
+<td>2010</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Relay</td>
 <td>2018</td>
 <td>Aftershock</td>
@@ -44202,6 +44449,41 @@
 <td>1976</td>
 <td>Harvey</td>
 <td><a href="HarveyComics/HarveyComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Richie Rich Gems Valentines Special</td>
+<td>2012</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Richie Rich Gems Winter Special</td>
+<td>2012</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Richie Rich: Rich Rescue</td>
+<td>2011</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Richie Rich: Rich Rescue Digest</td>
+<td>2012</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Richie Rich: Welcome To Rich Rescue</td>
+<td>2012</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
 </tr>
 
 <tr>
@@ -45826,6 +46108,13 @@
 </tr>
 
 <tr>
+<td>Scarlet Veronica</td>
+<td>2008</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Scarlet Witch</td>
 <td>1994</td>
 <td>Marvel</td>
@@ -46040,6 +46329,13 @@
 <td>1988</td>
 <td>Eclipse</td>
 <td><a href="Scout/Scout.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Scratch9</td>
+<td>2010</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
 </tr>
 
 <tr>
@@ -46600,6 +46896,20 @@
 <td>1987</td>
 <td>Blackthorne</td>
 <td><a href="Blackthorne/Blackthorne.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Sesame Street</td>
+<td>2013</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Sesame Workshop: Sesame Street</td>
+<td>2013</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
 </tr>
 
 <tr>
@@ -47184,6 +47494,13 @@
 </tr>
 
 <tr>
+<td>Shrek</td>
+<td>2010</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Shrek 2</td>
 <td>2004</td>
 <td>Dreamworks</td>
@@ -47195,6 +47512,13 @@
 <td>2010</td>
 <td>Dreamworks</td>
 <td><a href="Dreamworks/Dreamworks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Shrek Prequel</td>
+<td>2010</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
 </tr>
 
 <tr>
@@ -49865,6 +50189,27 @@
 </tr>
 
 <tr>
+<td>Strawberry Shortcake</td>
+<td>2011</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Strawberry Shortcake Halloween: Scouts!</td>
+<td>2012</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Strawberry Shortcake: Berry Fun!</td>
+<td>2012</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Stray</td>
 <td>2015</td>
 <td>Action Lab</td>
@@ -50061,6 +50406,13 @@
 </tr>
 
 <tr>
+<td>SubCulture</td>
+<td>2008</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Submarine Attack</td>
 <td>1958</td>
 <td>Charlton</td>
@@ -50156,6 +50508,13 @@
 <td>2018</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Sullengrey</td>
+<td>2005</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
 </tr>
 
 <tr>
@@ -50296,6 +50655,13 @@
 <td>1967</td>
 <td>Dell</td>
 <td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Super Human Resources</td>
+<td>2009</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
 </tr>
 
 <tr>
@@ -51010,6 +51376,13 @@
 <td>1950</td>
 <td>Avon</td>
 <td><a href="Avon/Avon.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Teddy Scares</td>
+<td>2007</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
 </tr>
 
 <tr>
@@ -55567,6 +55940,13 @@
 <td>2002</td>
 <td>AIT Planet Lar</td>
 <td><a href="AITPlanetLar/AITPlanetLar.html">Details</a></td>
+</tr>
+
+<tr>
+<td>White Picket Fences</td>
+<td>2008</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
 </tr>
 
 <tr>
